Update the base64 methods to use the Base64 class instead of the XML classes.